--- a/styles/main.css
+++ b/styles/main.css
@@ -6,11 +6,21 @@
     --gray: #8e8e8e;
     --scorpion: #575757;
     --dark-scorpion: #464646;
-    background-color: var(--wild-sand);
+    background-color: var(--dark-au-chico);
 }
 
 * {
     box-sizing: border-box;
+}
+
+header {
+    background-color: var(--dark-au-chico);
+    color: var(--wild-sand);
+    padding: 1rem 2rem;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
 }
 
 body {
@@ -47,7 +57,14 @@ h6 {
 }
 
 picture img {
-    width: 100%;
+    display: block;
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -2;
 }
 
 .inline-picture {
@@ -60,7 +77,7 @@ h1,
 h2,
 h3 {
     line-height: 1.2;
-    margin: 1em 0 0.5em;
+    /* margin: 1em 0 0.5em; */
 }
 
 h1 {
@@ -72,6 +89,7 @@ h1 {
 h2 {
     color: var(--scorpion);
     font-size: 2rem;
+    padding-top: 2rem;
 }
 
 h3 {
@@ -108,9 +126,45 @@ a:focus {
 }
 
 main {
+    width: 100%;
+    background-color: var(--wild-sand);
+}
+
+.button:last-child {
+    margin-bottom: 10rem;
+}
+
+/* main:first-child {
+    margin-top: 100rem;
+} */
+
+/* h2, p {
+    margin: 0;
+} */
+
+h1 {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    z-index: -1;
+    color: var(--wild-sand);
+    text-shadow: 0 0 30px rgb(0 0 0 / 70%);
+    font-size: 3.5rem;
+    width: 100%;
+    text-align: center;
+    padding: 0 2rem;
+    transform: translate(-50%, -50%);
+}
+
+article {
+    background-color: var(--wild-sand);
     margin: 0 auto;
     max-width: 50rem;
     padding: 0 1rem;
+}
+
+.first-article {
+    margin-top: 100vh;
 }
 
 .button {
@@ -137,4 +191,64 @@ main {
 .button:focus {
     background-color: var(--dark-au-chico);
     box-shadow: 0 0 0 2px var(--dark-au-chico);
+}
+
+.scroll-down {
+    background-color: var(--koromiko);
+    padding: 1rem 2rem;
+  
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+  
+    cursor: pointer;
+  
+    font-size: 1rem;
+    color: var(--dark-scorpion);
+    text-align: center;
+  
+    z-index: -1;
+}
+
+.scroll-down::before {
+    display: inline-block;
+    padding-bottom: 0;
+    padding-right: 10px;
+    content: "▼";
+}
+
+  .scroll-down::after {
+    display: inline-block;
+    padding-bottom: 0;
+    padding-left: 10px;
+    content: "▼";
+  }
+
+header a:link {
+    color: var(--wild-sand);
+    font-weight: bold;
+    text-decoration: none;
+}
+
+header a:visited {
+    color: var(--wild-sando);
+}
+
+header a:hover {
+    text-decoration: underline;
+}
+
+header a:active,
+header a:focus {
+    color: var(--gray);
+}
+
+header .dead-link {
+    color: var(--gray);
+}
+
+header .dead-link:hover {
+    text-decoration: none;
+    color: var(--gray);
 }
