--- a/styles/main.css
+++ b/styles/main.css
@@ -6,6 +6,7 @@
     --gray: #8e8e8e;
     --scorpion: #575757;
     --dark-scorpion: #464646;
+    --overlay: rgba(0, 0, 0, .4);
     background-color: var(--dark-au-chico);
 }
 
@@ -21,12 +22,15 @@ header {
     top: 0;
     left: 0;
     width: 100%;
+    z-index: 1;
 }
 
 body {
     font-family: "Open Sans", sans-serif;
     color: var(--scorpion);
     line-height: 1.5;
+    background-color: var(--wild-sand);
+    /* margin-bottom: 0; */
 }
 
 aside {
@@ -44,7 +48,7 @@ footer {
     /* margin: 0 auto; */
     text-align: center;
     margin: 5rem;
-    
+    margin-bottom: 0;
 }
 
 h1,
@@ -134,14 +138,6 @@ main {
     margin-bottom: 10rem;
 }
 
-/* main:first-child {
-    margin-top: 100rem;
-} */
-
-/* h2, p {
-    margin: 0;
-} */
-
 h1 {
     position: fixed;
     top: 50%;
@@ -165,6 +161,12 @@ article {
 
 .first-article {
     margin-top: 100vh;
+}
+
+section {
+    margin: 0 auto;
+    max-width: 100rem;
+    padding: 0 1rem;
 }
 
 .button {
@@ -196,18 +198,18 @@ article {
 .scroll-down {
     background-color: var(--koromiko);
     padding: 1rem 2rem;
-  
+
     position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
-  
+
     cursor: pointer;
-  
+
     font-size: 1rem;
     color: var(--dark-scorpion);
     text-align: center;
-  
+
     z-index: -1;
 }
 
@@ -218,12 +220,12 @@ article {
     content: "▼";
 }
 
-  .scroll-down::after {
+.scroll-down::after {
     display: inline-block;
     padding-bottom: 0;
     padding-left: 10px;
     content: "▼";
-  }
+}
 
 header a:link {
     color: var(--wild-sand);
@@ -251,4 +253,54 @@ header .dead-link {
 header .dead-link:hover {
     text-decoration: none;
     color: var(--gray);
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+/* cards */
+.cards {
+    display: flex;
+    margin-left: 1rem;
+    margin: 0 auto;
+}
+
+.card {
+    float: left;
+    margin: 3rem .5rem;
+    position: relative;
+}
+
+.image-wrapper img {
+    max-width: 350px;
+    display: block;
+}
+
+.card .overlay {
+    background-color: var(--overlay);
+    opacity: 0;
+}
+
+.card .overlay p {
+    margin-left: 1rem;
+    margin-top: 1em;
+    font-size: 3rem;
+    line-height: 3rem;
+    color: var(--wild-sand);
+}
+
+.card:hover .overlay {
+    transition: opacity 800ms ease;
+    opacity: 1;
+}
+
+.card:active,
+.card:focus {
+    background-color: var(--dark-scorpion);
+    box-shadow: 0 0 0 2px var(--dark-scorpion);
 }
